# iz1

./: .travis.yml  CMakeLists.txt  README.md
include/: mergeSort.h  results.h
src/: implementation_merge_sort.c  implementation_results.c  main.c
test/: CMakeLists.txt  main.cpp  mergeSort.cpp  results.cpp
